# robot_perception

./: README.md
initialize_camera_tools/: CMakeLists.txt  package.xml
initialize_camera_tools/src/: analyze_color.py  blue_cube.txt  blue_triangle.txt  bounding_box_test.py  green_cube.txt  green_cylinder.txt  non_object_clipping.py  object_detection.py  orange_plus.txt  picture_capture.py  purple_plus.txt  red_ball.txt  red_cylinder.txt  train_svm.py  yellow_ball.txt  yellow_cube.txt
object_detection/: CMakeLists.txt  README.md  package.xml
object_detection/msg/: Objects.msg
object_detection/src/: object_detection.py  object_detection_node.py  object_detection_save.py  object_detection_single.py
object_identification/: CMakeLists.txt  README.md  package.xml
object_identification/msg/: ObjectList.msg
object_identification/src/: network_model.py  object_identification_node.py  object_single_identification.py  old_voting.py  test_network.py  train_network.py
obstacle_detection/: CMakeLists.txt  README.md  package.xml
obstacle_detection/msg/: Obstacle.msg
obstacle_detection/src/: obstacle_detection.cpp
robot_perception/: CMakeLists.txt  package.xml
