
<package>
  <name>robot_perception</name>
  <version>0.0.0</version>
  <description>The robot_perception metapackage</description>


  <maintainer email="jantos@kth.se">Thomas Jantos</maintainer>



  <license>TODO</license>



  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>initialize_camera_tools</run_depend>
  <run_depend>object_detection</run_depend>




  <export>
    <metapackage/>
  </export>
</package>
